--- a/style.css
+++ b/style.css
@@ -90,6 +90,29 @@ p {
     margin-bottom: 10px;
 }
 
+.p-body {
+    font-family: 'Inter', sans-serif;
+    color: #151515;
+    font-size: 14px;
+    line-height: 20px;
+    letter-spacing: 0.25px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
+.p-body.small {
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0.4px;
+}
+
+.p-body.large {
+    font-size: 16px;
+    line-height: 24px;
+    letter-spacing: 0.5px;
+}
+
+
 .small {
     font-size: 14px;
     color: #6C6C6C;
