--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@ h6 {
     font-size: 16px;
     line-height: 24px;
     letter-spacing: 0.5px;
-    font-weight: 400;
+    font-weight: 500;
     margin-top: 2px;
     margin-bottom: 2px;
 }
@@ -279,6 +279,155 @@ p {
     justify-content: flex-start;
 }
 
+
+.c-card-wrapper {
+    overflow: hidden;
+    position: relative;
+    padding: 48px 24px;
+    background-image: linear-gradient(360deg, #F5F5F5 0%, #FCFCFC 100%);
+    border-radius: 12px;
+    box-shadow: 0px 10px 4px rgba(135, 135, 135, 0.01), 0px 5px 3px rgba(135, 135, 135, 0.03), 0px 2px 2px rgba(135, 135, 135, 0.04), 0px 1px 1px rgba(135, 135, 135, 0.05), 0px 0px 0px rgba(135, 135, 135, 0.05);
+    transition: 500ms ease;
+    cursor: pointer;
+
+    transition: all 500ms ease;
+}
+
+.card-background {
+    position: absolute;
+    background-image: linear-gradient(0deg, #151515 0%, #383838 50%);
+    opacity: 0;
+    margin: auto;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    z-index: 0;
+
+    transition: 300ms ease;
+}
+
+.c-card-wrapper .card-background {
+    opacity: 0;
+
+    transition: 300ms ease;
+}
+
+
+
+.c-card-wrapper:hover .card-background {
+    opacity: 1;
+
+    transition: 300ms ease;
+}
+
+.c-card-wrapper:hover {
+    transition: 350ms ease;
+    transform: translateY(-12px);
+}
+
+.c-card-wrapper:hover .c-avatar {
+    transform: translateY(-100px);
+
+    transition: 300ms ease;
+}
+
+.c-card-wrapper .c-avatar {
+    transform: translateY(0%);
+
+    transition: 300ms ease;
+}
+
+
+.c-card-wrapper:hover h6 {
+    transform: translateY(-48px);
+    color: #FFFFFF;
+    z-index: 1;
+
+    transition: 300ms ease;
+}
+
+.c-card-wrapper h6 {
+    transform: translateY(0px);
+    color: #151515;
+    z-index: 1;
+
+    transition: 300ms ease;
+}
+
+
+.c-card-wrapper:hover .p-body.small {
+    transform: translateY(-48px);
+    color: #FFFFFF;
+    z-index: 1;
+
+    transition: 300ms ease;
+}
+
+.c-card-wrapper .p-body.small {
+    transform: translateY(0px);
+    color: #151515;
+    z-index: 1;
+
+    transition: 300ms ease;
+}
+
+.c-card-wrapper:hover .card-icon-2 {
+    transform: translateY(0%);
+    stroke: #FFFFFF;
+
+    transition: 300ms ease;
+}
+
+.c-card-wrapper .card-icon-2 {
+    transform: translateY(101%);
+    stroke: #FFFFFF;
+
+    transition: 300ms ease;
+}
+
+
+.c-card-wrapper:hover .card-icon-1 {
+    transform: translateY(-48px);
+
+    transition: 300ms ease;
+}
+
+.c-card-wrapper .card-icon-1 {
+    transform: translateY(0px);
+
+    transition: 300ms ease;
+}
+
+
+.card-contents {
+    display: flex;
+    position: relative;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: stretch;
+    z-index: 1;
+}
+
+.c-avatar {
+    height: auto;
+    width: auto;
+}
+
+.c-avatar-wrapper {
+    margin-bottom: 12px;
+    overflow: hidden;
+}
+
+
+.card-icon-1 {
+    position: absolute;
+}
+
+.card-icon-2 {
+    position: relative;
+}
 
 .column-wrapper {
     display: flex;
@@ -1564,6 +1713,8 @@ input:focus {
 .icon-wrapper {
     display: flex;
     gap: 6px;
+    overflow: hidden;
+    position: relative;
 }
 
 .inner-div-example {
