--- a/style.css
+++ b/style.css
@@ -159,7 +159,7 @@ p {
 }
 
 .text-link.onDark {
-    color: #A3E6D4;
+    color: #EC8588;
 }
 
 .text-link:hover {
@@ -169,17 +169,18 @@ p {
 
 
 .text-link.onDark:hover {
-    color: #00B987;
+    color: #E03339;
 }
 
 .c-toasts {
     display: flex;
-    padding: 24px;
+    padding: 26px 24px;
     align-items: flex-start;
     gap: 18px;
     border: 1px solid #CCCCCC;
     border-radius: 12px;
-    font-size: 12px;
+    font-size: 14px;
+    line-height: 24x;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
 }
@@ -195,7 +196,7 @@ p {
     font-family: 'Inter', sans-serif;
     padding: 24px;
     border-radius: 12px;
-    font-size: 12px;
+    font-size: 14px;
     line-height: 1.6em;
     margin-top: 0px;
     margin-bottom: 0px ;
@@ -556,7 +557,7 @@ a {
 }
 
 .active, .a-navlink:hover {
-    background: #F5F5F5;
+    background: #CCCCCC;
     color: #151515;
     border-left: 4px solid #FFFFFF00;
     transition: all 300ms ease;
@@ -577,28 +578,27 @@ a {
 
 
 .active {
-    background: #F2F2F2;
+    background: #151515;
     padding-left: 32px;
     transition: all 300ms ease;
 }
 
 
 .active:hover {
-    background: #CCCCCC;
+    background: #5A1417;
     transition: all 300ms ease;
 }
 
 .active:hover .navlink {
-    color: #151515;
+    color: #FFFFFF;
 }
 
 .active:hover .nav-icon path {
-    stroke: #151515;
+    stroke: #FFFFFF;
 }
 
 .active .navlink {
-    color: #151515;
-    font-weight: 500;
+    color: #FFFFFF;
 }
 
 .nav-icon path {
@@ -606,7 +606,7 @@ a {
 }
 
 .active .nav-icon path {
-    stroke: #151515;
+    stroke: #FFFFFF;
 }
 
 .nav-icon:active path {
@@ -630,10 +630,8 @@ a {
 
 .c-sidebar-contents-2 {
     display: block;
-    flex-grow: 1;
-    flex-shrink: 1;
-    flex-basis: 0%;
-    height: 100%;
+    position: absolute;
+    bottom: 2.5rem;
 }
 
 .divider {
@@ -1275,7 +1273,7 @@ input[type="checkbox"]:focus {
 }
 
 .l-section.background-1 {
-    background: #004a36;
+    background: linear-gradient(180deg, #5A1417 0%, #0F2532 100%);
 }
 
 .l-container {
