--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ p {
     border: 1px solid #CCCCCC;
     border-radius: 12px;
     font-size: 14px;
-    line-height: 24x;
+    line-height: 1.6em;
     font-family: 'Inter', sans-serif;
     font-weight: 400;
 }
