--- a/style.css
+++ b/style.css
@@ -1273,7 +1273,8 @@ input[type="checkbox"]:focus {
 }
 
 .l-section.background-1 {
-    background: linear-gradient(180deg, #5A1417 0%, #0F2532 100%);
+    background: linear-gradient(324.03deg, #151515 22.5%, #5B5B5B 83.63%);
+    box-shadow: inset 0px 15px 4px rgba(0, 0, 0, 0.02), inset 0px 9px 4px rgba(0, 0, 0, 0.15), inset 0px 5px 3px rgba(0, 0, 0, 0.5), inset 0px 2px 2px rgba(0, 0, 0, 0.85), inset 0px 1px 1px rgba(0, 0, 0, 0.98);
 }
 
 .l-container {
