--- a/style.css
+++ b/style.css
@@ -686,6 +686,13 @@ input[type="checkbox"]:focus {
 
 /* >>>>>> PRIMARY BUTTON & HOVER STATES <<<<<< */
 
+.btn-primary.small {
+    min-height: 40px;
+    max-height: 40px;
+    max-width: 50%;
+    padding: 0px 24px;
+}
+
 .btn-primary {
     position: relative;
     display: flex;
@@ -812,6 +819,10 @@ input[type="checkbox"]:focus {
     background: none;
 }
 
+.btn-text-1.small, .btn-text-2.small {
+    font-size: 12px;
+}
+
 .btn-text-1 {
     color: #F5F5F5;
     position: absolute;
@@ -933,6 +944,13 @@ input[type="checkbox"]:focus {
     transition: all 500ms ease;
 }
 
+.btn-secondary.small {
+    min-height: 40px;
+    max-height: 40px;
+    max-width: 50%;
+    padding: 0px 12px;
+}
+
 .btn-secondary.pressed {
     background: linear-gradient(360deg, #F5F5F5 0%, #FCFCFC 100%);
     box-shadow: inset -4px 11px 5px rgba(0, 0, 0, 0.01), inset -2px 6px 4px rgba(0, 0, 0, 0.05), inset -1px 3px 3px rgba(0, 0, 0, 0.09), inset 0px 1px 2px rgba(0, 0, 0, 0.1);
@@ -966,6 +984,10 @@ input[type="checkbox"]:focus {
     color: #151515;
     position: absolute;
     z-index: 1;
+}
+
+.btn-text-3.small, .btn-text-4.small, .btn-secondary-text.small {
+    font-size: 12px;
 }
 
 .btn-text-4 {
@@ -1086,6 +1108,121 @@ input[type="checkbox"]:focus {
 }
 
 /* ^^^^^^ SECONDARY BUTTON & HOVER STATES ^^^^^^ */
+
+.btn-tertiary {
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    overflow: hidden;
+    gap: 12px;
+    min-height: 48px;
+    max-height: 48px;
+    padding: 0px 24px;
+    justify-content: center;
+    align-items: center;
+    border-radius: 12px;
+    color: #F5F5F5;
+    letter-spacing: 0.5px;
+    cursor: pointer;
+    background-color: #152dff;
+    box-shadow: 0px 14px 6px rgba(0, 0, 0, 0.01), 0px 8px 5px rgba(0, 0, 0, 0.05), 0px 4px 4px rgba(0, 0, 0, 0.09), 0px 1px 2px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
+
+    transition: all 500ms ease !important;
+}
+
+.btn-tertiary:hover {
+    box-shadow: none;
+
+    transition: all 500ms ease;
+}
+
+.btn-tertiary-hover {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    right: 0%;
+    bottom: 0%;
+    z-index: 0;
+    min-height: 100%;
+    min-width: 100%;
+    background-color: #0010A1;
+    box-shadow: inset -4px 11px 5px rgba(0, 0, 0, 0.01), inset -2px 6px 4px rgba(0, 0, 0, 0.05), inset -1px 3px 3px rgba(0, 0, 0, 0.09), inset 0px 1px 2px rgba(0, 0, 0, 0.1);
+
+    transition: all 500ms ease;
+}
+
+.btn-tertiary .btn-tertiary-hover {
+    opacity: 0;
+
+    transition: all 800ms ease;
+}
+
+.btn-tertiary:hover .btn-tertiary-hover {
+    opacity: 1;
+
+    transition: all 800ms ease;
+}
+
+.btn-text-5 {
+    position: relative;
+    z-index: 1;
+    font-size: 14px;
+    color: #FFFFFF;
+}
+
+.btn-tertiary.disabled {
+    box-shadow: none;
+
+    opacity: .5;
+    cursor: not-allowed;
+}
+
+.btn-tertiary .btn-icon-1 {
+    transform: translateY(0px);
+
+    transition: all 500ms ease;
+}
+
+.btn-tertiary:hover .btn-icon-1 {
+    transform: translateY(50px);
+
+    transition: all 500ms ease;
+}
+
+.btn-tertiary .btn-icon-2 {
+    transform: translateY(-50px);
+
+    transition: all 500ms ease;
+}
+
+.btn-tertiary:hover .btn-icon-2 {
+    transform: translateY(0px);
+
+    transition: all 500ms ease;
+}
+
+.btn-tertiary.pressed {
+    background: #0010A1;
+    box-shadow: inset -4px 11px 5px rgba(0, 0, 0, 0.01), inset -2px 6px 4px rgba(0, 0, 0, 0.05), inset -1px 3px 3px rgba(0, 0, 0, 0.09), inset 0px 1px 2px rgba(0, 0, 0, 0.1);
+}
+
+.btn-tertiary.pressed:hover {
+    box-shadow: none;
+    background: #152dff;
+}
+
+.btn-tertiary.small {
+    min-height: 32px;
+    max-height: 32px;
+    max-width: 50%;
+    width: auto;
+    padding: 0px 12px;
+    border-radius: 6px;
+}
+
+.btn-text-5.small {
+    font-size: 12px;
+}
 
 .color-block {
     border-radius: 12px;
