--- a/prism.css
+++ b/prism.css
@@ -1,3 +1,143 @@
-/* PrismJS 1.29.0
-https://prismjs.com/download.html#themes=prism-dark&languages=markup+css+clike+javascript */
-code[class*=language-],pre[class*=language-]{color:#fff;background:0 0;text-shadow:0 -.1em .2em #000;font-family:Consolas,Monaco,'Andale Mono','Ubuntu Mono',monospace;font-size:1em;text-align:left;white-space:pre;word-spacing:normal;word-break:normal;word-wrap:normal;line-height:1.5;-moz-tab-size:4;-o-tab-size:4;tab-size:4;-webkit-hyphens:none;-moz-hyphens:none;-ms-hyphens:none;hyphens:none}@media print{code[class*=language-],pre[class*=language-]{text-shadow:none}}:not(pre)>code[class*=language-],pre[class*=language-]{background:#4c3f33}pre[class*=language-]{padding:1em;margin:.5em 0;overflow:auto;border:.3em solid #7a6651;border-radius:.5em;box-shadow:1px 1px .5em #000 inset}:not(pre)>code[class*=language-]{padding:.15em .2em .05em;border-radius:.3em;border:.13em solid #7a6651;box-shadow:1px 1px .3em -.1em #000 inset;white-space:normal}.token.cdata,.token.comment,.token.doctype,.token.prolog{color:#997f66}.token.punctuation{opacity:.7}.token.namespace{opacity:.7}.token.boolean,.token.constant,.token.number,.token.property,.token.symbol,.token.tag{color:#d1939e}.token.attr-name,.token.builtin,.token.char,.token.inserted,.token.selector,.token.string{color:#bce051}.language-css .token.string,.style .token.string,.token.entity,.token.operator,.token.url,.token.variable{color:#f4b73d}.token.atrule,.token.attr-value,.token.keyword{color:#d1939e}.token.important,.token.regex{color:#e90}.token.bold,.token.important{font-weight:700}.token.italic{font-style:italic}.token.entity{cursor:help}.token.deleted{color:red}
+/**
+ * atom-dark theme for `prism.js`
+ * Based on Atom's `atom-dark` theme: https://github.com/atom/atom-dark-syntax
+ * @author Joe Gibson (@gibsjose)
+ */
+
+ code[class*="language-"],
+ pre[class*="language-"] {
+     color: #c5c8c6;
+     text-shadow: 0 1px rgba(0, 0, 0, 0.3);
+     font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
+     direction: ltr;
+     text-align: left;
+     white-space: pre;
+     word-spacing: normal;
+     word-break: normal;
+     line-height: 1.5;
+ 
+     -moz-tab-size: 4;
+     -o-tab-size: 4;
+     tab-size: 4;
+ 
+     -webkit-hyphens: none;
+     -moz-hyphens: none;
+     -ms-hyphens: none;
+     hyphens: none;
+ }
+ 
+ /* Code blocks */
+ pre[class*="language-"] {
+     padding: 1em;
+     margin: .5em 0;
+     overflow: auto;
+     border-radius: 0.3em;
+ }
+ 
+ :not(pre) > code[class*="language-"],
+ pre[class*="language-"] {
+     background: #1d1f21;
+ }
+ 
+ /* Inline code */
+ :not(pre) > code[class*="language-"] {
+     padding: .1em;
+     border-radius: .3em;
+ }
+ 
+ .token.comment,
+ .token.prolog,
+ .token.doctype,
+ .token.cdata {
+     color: #7C7C7C;
+ }
+ 
+ .token.punctuation {
+     color: #c5c8c6;
+ }
+ 
+ .namespace {
+     opacity: .7;
+ }
+ 
+ .token.property,
+ .token.keyword,
+ .token.tag {
+     color: #96CBFE;
+ }
+ 
+ .token.class-name {
+     color: #FFFFB6;
+     text-decoration: underline;
+ }
+ 
+ .token.boolean,
+ .token.constant {
+     color: #99CC99;
+ }
+ 
+ .token.symbol,
+ .token.deleted {
+     color: #f92672;
+ }
+ 
+ .token.number {
+     color: #FF73FD;
+ }
+ 
+ .token.selector,
+ .token.attr-name,
+ .token.string,
+ .token.char,
+ .token.builtin,
+ .token.inserted {
+     color: #A8FF60;
+ }
+ 
+ .token.variable {
+     color: #C6C5FE;
+ }
+ 
+ .token.operator {
+     color: #EDEDED;
+ }
+ 
+ .token.entity {
+     color: #FFFFB6;
+     cursor: help;
+ }
+ 
+ .token.url {
+     color: #96CBFE;
+ }
+ 
+ .language-css .token.string,
+ .style .token.string {
+     color: #87C38A;
+ }
+ 
+ .token.atrule,
+ .token.attr-value {
+     color: #F9EE98;
+ }
+ 
+ .token.function {
+     color: #DAD085;
+ }
+ 
+ .token.regex {
+     color: #E9C062;
+ }
+ 
+ .token.important {
+     color: #fd971f;
+ }
+ 
+ .token.important,
+ .token.bold {
+     font-weight: bold;
+ }
+ 
+ .token.italic {
+     font-style: italic;
+ }
