added code base

--- a/prism.css
+++ b/prism.css
@@ -4,140 +4,140 @@
  * @author Joe Gibson (@gibsjose)
  */
 
- code[class*="language-"],
- pre[class*="language-"] {
+ 
+
+code[class*="language-"],
+pre[class*="language-"] {
      color: #c5c8c6;
      text-shadow: 0 1px rgba(0, 0, 0, 0.3);
-     font-family: Inconsolata, Monaco, Consolas, 'Courier New', Courier, monospace;
-     direction: ltr;
+     font-family: 'Inconsolata', 'Monaco', 'Consolas', 'Courier New', Courier, monospace;
+     font-size: 14px;
      text-align: left;
      white-space: pre;
      word-spacing: normal;
      word-break: normal;
-     line-height: 1.5;
- 
-     -moz-tab-size: 4;
-     -o-tab-size: 4;
-     tab-size: 4;
+     line-height: 1.5rem;
+     width: 100%;
  
      -webkit-hyphens: none;
      -moz-hyphens: none;
      -ms-hyphens: none;
      hyphens: none;
- }
+}
  
  /* Code blocks */
- pre[class*="language-"] {
-     padding: 1em;
+pre[class*="language-"] {
+    align-items: left;
+     padding: 12px 24px;
      margin: .5em 0;
      overflow: auto;
-     border-radius: 0.3em;
- }
+     border-radius: 12px;
+}
  
- :not(pre) > code[class*="language-"],
- pre[class*="language-"] {
+:not(pre) > code[class*="language-"],
+pre[class*="language-"] {
      background: #1d1f21;
- }
+}
  
  /* Inline code */
- :not(pre) > code[class*="language-"] {
+:not(pre) > code[class*="language-"] {
      padding: .1em;
      border-radius: .3em;
- }
+}
  
- .token.comment,
- .token.prolog,
- .token.doctype,
- .token.cdata {
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
      color: #7C7C7C;
- }
+}
  
- .token.punctuation {
+.token.punctuation {
      color: #c5c8c6;
- }
+}
  
- .namespace {
+.namespace {
      opacity: .7;
- }
+}
  
- .token.property,
- .token.keyword,
- .token.tag {
+.token.property,
+.token.keyword,
+.token.tag {
      color: #96CBFE;
- }
+}
  
- .token.class-name {
+.token.class-name {
      color: #FFFFB6;
      text-decoration: underline;
- }
+}
  
- .token.boolean,
- .token.constant {
+.token.boolean,
+.token.constant {
      color: #99CC99;
- }
+}
  
- .token.symbol,
- .token.deleted {
+.token.symbol,
+.token.deleted {
      color: #f92672;
- }
+}
  
- .token.number {
+.token.number {
      color: #FF73FD;
- }
+}
  
- .token.selector,
- .token.attr-name,
- .token.string,
- .token.char,
- .token.builtin,
- .token.inserted {
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
      color: #A8FF60;
- }
+}
  
- .token.variable {
+.token.variable {
      color: #C6C5FE;
- }
+}
  
- .token.operator {
+.token.operator {
      color: #EDEDED;
- }
+}
  
- .token.entity {
+.token.entity {
      color: #FFFFB6;
      cursor: help;
- }
+}
  
- .token.url {
+.token.url {
      color: #96CBFE;
- }
+}
  
- .language-css .token.string,
- .style .token.string {
+.language-css .token.string,
+.style .token.string {
      color: #87C38A;
- }
+}
  
- .token.atrule,
- .token.attr-value {
+.token.atrule,
+.token.attr-value {
      color: #F9EE98;
- }
+}
  
- .token.function {
+.token.function {
      color: #DAD085;
- }
+}
  
- .token.regex {
+.token.regex {
      color: #E9C062;
- }
+}
  
- .token.important {
+.token.important {
      color: #fd971f;
- }
+}
  
- .token.important,
- .token.bold {
+.token.important,
+.token.bold {
      font-weight: bold;
- }
+}
  
- .token.italic {
+.token.italic {
      font-style: italic;
- }
+}
