--- a/style.css
+++ b/style.css
@@ -1776,9 +1776,6 @@ input:focus {
     color: #151515;
 }
 
-
-
-
 .input-wrapper-strength .strengthMeter {
     position: absolute;
     bottom: 0;
@@ -1956,3 +1953,65 @@ input:focus {
 
 /* Prism JS */
 
+.code-wrapper {
+    min-width: 100%;
+    max-width: 100%;
+    border-radius: 12px;
+    background: #1d1f21;
+    overflow: hidden;
+}
+
+.code-title {
+    font-family: 'Inter', sans-serif;
+    color: #FFF;
+    font-size: 18px;
+    font-weight: 500;
+    padding: 12px 18px;
+    margin-left: 18px;
+    border-bottom: 1px solid #a3be8c;
+    max-width: fit-content; 
+}
+
+.tabs button {
+    background-color: inherit;
+    font-family: 'Inter', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    color: #FFF;
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 12px 24px;
+    transition: 300ms ease;
+}
+
+.tab {
+    overflow: hidden;
+}
+
+.tab button:hover {
+    background-color: #FAFAFA;
+}
+
+.tablinks.active {
+    background-color: none;
+    color: #FFFFFF;
+    border-bottom: 1px solid #a3be8c;
+}
+
+.tabcontent {
+    display: none;
+    padding: 6px 12px;
+    border: none;
+}
+
+.tabs {
+    padding: 36px;
+}
+
+.copy-button {
+    position: absolute;
+    top: 0;
+    right: 0;
+}
