--- a/style.css
+++ b/style.css
@@ -1990,6 +1990,7 @@ input:focus {
     overflow: hidden;
 }
 
+
 .tab button:hover {
     background-color: #FAFAFA;
 }
@@ -2004,6 +2005,10 @@ input:focus {
     display: none;
     padding: 6px 12px;
     border: none;
+}
+
+.tabcontent.active {
+    display: block;
 }
 
 .tabs {
