--- a/prism.css
+++ b/prism.css
@@ -1,10 +1,3 @@
-/**
- * atom-dark theme for `prism.js`
- * Based on Atom's `atom-dark` theme: https://github.com/atom/atom-dark-syntax
- * @author Joe Gibson (@gibsjose)
- */
-
- 
 
 code[class*="language-"],
 pre[class*="language-"] {
@@ -18,6 +11,7 @@ pre[class*="language-"] {
      word-break: normal;
      line-height: 1.5rem;
      width: 100%;
+     height: auto;
  
      -webkit-hyphens: none;
      -moz-hyphens: none;
