--- a/sidebar-hide.css
+++ b/sidebar-hide.css
@@ -48,12 +48,6 @@ body.dark-mode {
     --alert-success-light: #57723C;
 }
 
-ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
 html {
     scroll-behavior: smooth;
 }
@@ -306,18 +300,72 @@ p {
     color: var(--alert-success);
 }
 
+.link-items a {
+    display: flex;
+    align-items: center;
+    width: 100%;
+    padding: 12px;
+    border-radius: 12px;
+    white-space: nowrap;
+    text-transform: capitalize;
+    color: var(--text-color-light);
+}
+
+.link-items span .navlink {
+    transition: 300ms ease;
+    transform: translateX(100px);
+}
+
+.top {
+    margin-bottom: 1.2rem;
+    margin-top: -0.5rem;
+}
+
+.c-sidebar-wrapper ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+}
+
+.link-item .nav-icon {
+    stroke: var(--text-color-light);
+    min-width: 24px;
+    max-height: 24px;
+}
+
+.nav-icon-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    max-height: 24px;
+    width: 24px;
+    margin-left: 12px;
+}
+
+body.dark-mode .link-item.active a {
+    background-color: var(--bg-color);
+}
 
 .c-sidebar-wrapper {
     position: fixed;
-    top: 0;
-    left: 0;
+    margin: 0 auto;
     z-index: 1111;
-    display: block;
-    padding-top: 12px;
-    padding-bottom: 12px;
+    overflow: hidden;
+    transition: 300ms ease;
     min-height: 100%;
-    width: 16%;
+    width: 96px;
     background: var(--bg-color);
+}
+
+.c-sidebar-wrapper.shown .link-item .navlink {
+    transition-delay: calc(0.02s * var(--i));
+    transform: translateX(0px);
+}
+
+
+.c-sidebar-wrapper.shown {
+    width: 300px;
 }
 
 .c-brand-wrapper {
@@ -333,11 +381,11 @@ p {
 .c-card-wrapper {
     overflow: hidden;
     position: relative;
-    padding: 48px 24px;
+    padding: 24px;
     background: var(--light-gradient);
     border-radius: 12px;
     box-shadow: 0px 10px 4px rgba(135, 135, 135, 0.01), 0px 5px 3px rgba(135, 135, 135, 0.03), 0px 2px 2px rgba(135, 135, 135, 0.04), 0px 1px 1px rgba(135, 135, 135, 0.05), 0px 0px 0px rgba(135, 135, 135, 0.05);
-    transition: 500ms ease;
+    transition: 300ms ease;
     cursor: pointer;
 
     transition: all 500ms ease;
@@ -363,6 +411,8 @@ p {
 
     transition: 300ms ease;
 }
+
+
 
 .c-card-wrapper:hover .card-background {
     opacity: 1;
@@ -402,10 +452,6 @@ p {
     z-index: 1;
 
     transition: 300ms ease;
-}
-
-.link-items a span {
-    font-weight: 500;
 }
 
 
@@ -561,13 +607,10 @@ p {
 
 .a-navlink {
     display: flex;
-    padding: 8px 24px;
     align-items: center;
-    font-weight: 500;
     gap: 8px;
     cursor: pointer;
     transition: all 300ms ease;
-    border-left: 4px solid #FFFFFF00;
 }
 
 a {
@@ -578,13 +621,10 @@ a {
 .link {
     text-decoration: none;
     display: flex;
-    padding: 8px 24px;
-    font-weight: 500;
     align-items: center;
     gap: 8px;
     cursor: pointer;
     transition: all 300ms ease;
-    border-left: 4px solid #FFFFFF00;
 }
 
 .link-items a span {
@@ -620,15 +660,11 @@ a {
 }
 
 .active, .a-navlink:hover {
-    padding-left: 32px;
     color: var(--text-color-dark);
-    border-left: 4px solid #FFFFFF00;
     transition: all 300ms ease;
 }
 
-.link span {
-    font-weight: 500 !important;
-}
+
 
 .a-navlink:active .navlink {
     color: var(--text-color-light);
@@ -642,7 +678,6 @@ a {
 
 .active {
     background: none;
-    padding-left: 32px;
     transition: all 300ms ease;
 }
 
